--- a/typescript/simple-mercari-web/src/App.css
+++ b/typescript/simple-mercari-web/src/App.css
@@ -3,29 +3,29 @@
 }
 
 .Title {
-  background-color: #222427;
+  background-color: #cfadca27;
   min-height: 8vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: left;
-  font-size: calc(10px + 1vmin);
-  color: white;
+  font-size: calc(12px + 1vmin);
+  color: rgb(99, 79, 96);
 }
 
 .Listing {
-  background-color: #222427;
-  min-height: 8vh;
+  background-color: #705371;
+  min-height: 15vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: left;
+  justify-content: center;
   font-size: calc(10px + 1vmin);
   color: white;
 }
 
 .ItemList {
-  background-color: #222427;
+  background-color: #705371;
   min-height: 8vh;
   display: flex;
   flex-direction: column;
@@ -36,7 +36,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #386e7d;
 }
 
 @keyframes App-logo-spin {
