--- a/typescript/simple-mercari-web/src/App.css
+++ b/typescript/simple-mercari-web/src/App.css
@@ -39,6 +39,15 @@
   color: #386e7d;
 }
 
+.ItemList{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.Image{
+  aspect-ratio: 1/1;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
